fix merge error 1

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: Tôi yêu việc tôi đang làm.
 
 github_username: hashdotlee
 # you can comment the below line out if your repo name is not different than your baseurl
-github_repo: "cl2020"
+# github_repo: "cl2020"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
